# rz-silhouette

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: bindings.yml
docs/: HINTS.md  PROTOCOL.md  README.md  SIGNATURES.md
src/: service.capnp  service.capnp.c  service.capnp.h  service.pb-c.c  service.pb-c.h  service.proto  sil.h  sil_capnp.c  sil_capnp.h  sil_client.c  sil_const.h  sil_helpers.c  sil_helpers.h  sil_plugin.c  sil_protocol.c  sil_protocol.h
src/capnp/: c.capnp  go.capnp
src/capnp_runtime/: README.md  capn.c  capnp_c.h
subprojects/: c-capnproto.wrap  protobuf-c.wrap
subprojects/packagefiles/protobuf-c/: meson.build
